# codex-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: index.html  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: context_config.rs  history_sync.rs  lib.rs  local_router.rs  main.rs  plugin_unlock.rs  relay_config.rs
