[package]
name = "codex_token_viewer"
version = "1.0.0"
description = "Codex Token Viewer desktop widget"
authors = ["janrone"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "codex_token_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2.5.1"
