[package]
name = "codex_toolkit"
version = "1.2.0"
description = "Codex Toolkit desktop utility"
authors = ["moshushi"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "codex_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
filetime = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2.5.1"
toml_edit = "0.22"
tungstenite = "0.24"

[dev-dependencies]
tempfile = "3"
